dataset1235/2025-2/805158916/users/69248557/executions/2651470117_2383239197.log
== RUN (2025-08-27 04:50:29)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

rad = math.radians

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * rad)
                                        ~~~~~~~~~~~~~~~~^~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:47:20)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

rad = math.radians

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos)
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:51:39)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.radians )
                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 05:03:02)
-- CODE: 
import math
a = float(input("Informe dis1 "))
b = float(input("Informe dis2 "))
graus= float(input("Informe angulo "))

graus = math.radians(graus)

lei = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(graus))

print(round(lei, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe dis1 Informe dis2 Informe angulo 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe dis1 Informe dis2 Informe angulo 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe dis1 Informe dis2 Informe angulo 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe dis1 Informe dis2 Informe angulo 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe dis1 Informe dis2 Informe angulo 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe dis1 Informe dis2 Informe angulo 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:02:44)
-- CODE: 
import math
a = float(input("Informe dis1 "))
b = float(input("Informe dis2 "))
graus= float(input("Informe angulo "))

graus = math.radians(graus)

lei = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(graus))

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe dis1 Informe dis2 Informe angulo 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe dis1 Informe dis2 Informe angulo 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe dis1 Informe dis2 Informe angulo 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe dis1 Informe dis2 Informe angulo 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe dis1 Informe dis2 Informe angulo 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe dis1 Informe dis2 Informe angulo 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:52:30)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

rad = math.radians

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))
                                                          ^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:01:17)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

graus1 = math.radians(graus)

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(graus))

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe a Informe b Informe angulo 111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe a Informe b Informe angulo 25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe a Informe b Informe angulo 22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe a Informe b Informe angulo 1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe a Informe b Informe angulo 56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe a Informe b Informe angulo 17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:48:25)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

rad = math.radians

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos())
                                                          ^^^^^^^^^^
TypeError: math.cos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:46:41)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

rad = math.radians()

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(rad))

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rad = math.radians()
          ^^^^^^^^^^^^^^
TypeError: math.radians() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:49:37)
-- CODE: 
import math
dis1 = float(input("Informe a "))
dis2 = float(input("Informe b "))
graus= float(input("Informe angulo "))

gamma_rad = math.radians(gamma)

lei = math.sqrt(dis1**2 + dis2**2 - 2 * dis1 * dis2 * math.cos(gamma_rad))

print(round(lei, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    gamma_rad = math.radians(gamma)
                             ^^^^^
NameError: name 'gamma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
